--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* @import "tailwindcss"; */
-@import "../../vendor/livewire/flux/dist/flux.css";
-
-@custom-variant dark (&:where(.dark, .dark *));
+@tailwind variants;
